--- a/inicio.html
+++ b/inicio.html
@@ -7,17 +7,13 @@
       *{
         text-align: center;
       }
-      #espacio{
-        width: 40%;
-        height: auto;
-      }
     </style>
   </head>
   <body>
 <h1>Dibujo en canvas</h1>
 <canvas id="espacio" width="300" height="300"></canvas>
 
-<script type="text/javascript" src="lineas.js">
+<script type="text/javascript" src="lineas.js">//se cambia la ruta del archivo para probar los eventos del teclado
 
 </script>
   </body>
